--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ajv": "^6.5.2",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
+    "ajv": "^6.5.5",
     "autoprefixer": "7.1.6",
     "axiom": "^0.1.6",
-    "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.1",
-    "babel-runtime": "6.26.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^9.0.0",
+    "babel-jest": "^23.4.2",
+    "babel-loader": "^8.0.0",
+    "babel-plugin-react-css-modules": "^3.4.4",
+    "babel-preset-react-app": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
@@ -25,26 +29,28 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "^1.1.5",
+    "file-loader": "^1.1.11",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "imagemin": "^5.3.1",
-    "img-loader": "^3.0.0",
+    "img-loader": "^3.0.1",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
+    "postcss-scss": "^2.0.0",
     "promise": "8.0.1",
     "proptypes": "^1.1.0",
     "raf": "3.4.0",
-    "react": "^16.4.1",
-    "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.6.3",
+    "react-dev-utils": "^5.0.3",
+    "react-dom": "^16.6.3",
+    "react-google-login": "^4.0.0",
     "react-icons": "^2.2.7",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
+    "redux": "^4.0.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -93,12 +99,11 @@
       "mjs"
     ]
   },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0"
   }
 }
