--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ajv": "^6.5.5",
     "autoprefixer": "7.1.6",
     "axiom": "^0.1.6",
+    "axios": "^0.18.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
