--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.5.0",
     "redux": "^4.0.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
