--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "postcss-loader": "2.0.8",
     "postcss-scss": "^2.0.0",
     "promise": "8.0.1",
+    "prop-types": "^15.6.2",
     "proptypes": "^1.1.0",
     "raf": "3.4.0",
     "react": "^16.6.3",
