--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@kennethormandy/react-fittext": "^0.5.1",
     "ajv": "^6.5.5",
     "autoprefixer": "7.1.6",
     "axiom": "^0.1.6",
