--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-textarea-autosize": "^7.1.0",
     "react-transition-group": "^2.5.0",
     "redux": "^4.0.1",
     "resolve": "1.6.0",
