--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^16.6.3",
     "react-google-login": "^4.0.0",
     "react-icons": "^2.2.7",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
