--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "imagemin": "^5.3.1",
     "img-loader": "^3.0.1",
     "jest": "20.0.4",
+    "lodash": "^4.17.11",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
