--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-google-login": "^4.0.0",
     "react-icons": "^2.2.7",
     "react-input-mask": "^2.0.4",
+    "react-linkify": "^0.2.2",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
