--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,13 @@
 
 # misc
 .DS_Store
+.env
 .env.local
-.env.development.local
+.env.development
 .env.test.local
-.env.production.local
+.env.production
+
+postcss.config.js
 
 npm-debug.log*
 yarn-debug.log*
