--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^16.7.0",
     "react-google-login": "^4.0.1",
     "react-icons": "^2.2.7",
+    "react-image-gallery": "^0.8.12",
     "react-input-mask": "^2.0.4",
     "react-linkify": "^0.2.2",
     "react-redux": "^5.1.1",
